# Freddie

./: .gitignore  README.md  constants.py  data_exploration.ipynb  event_boundary_visualization.ipynb  harry_plotter.py  hyperparams.json  hyperparams.yaml  inference.ipynb  label_assimilation.ipynb  label_comparison.ipynb  messenger_dataset.py  messenger_dataset_test.ipynb  models.py  normalization_techniques.ipynb  orbit_label_merger.ipynb  playground.ipynb  requirements.txt  setup.cfg  stacking.ipynb  techparams.json  techparams.yaml  training_data_generation.ipynb  training_data_validation.ipynb  training_playground.ipynb  utils.py
config/: hyperparams.yaml  techparams.yaml
config/sweeps/: baseline_tuning.yaml  feature_selection.yaml  feature_selection1.yaml  feature_selection2.yaml  feature_selection3.yaml
labels/: messenger-0001_-0050_labelled.csv  messenger-0001_-0200_labelled.csv  messenger-0001_-4084_labelled.csv  messenger-0001_-4094_labelled.csv  messenger-0001_-4094_labelled_bak.csv  messenger-0011_-4104_labelled.csv
notebooks/: conv1d_params.ipynb  data_exploration.ipynb  evaluation_metrics.ipynb  inference.ipynb  label_assimilation.ipynb  label_comparison.ipynb  messenger_dataset_test.ipynb  training_data_generation.ipynb  training_data_validation.ipynb  training_playground.ipynb
notebooks/data/: crossing_stats.ipynb  data_exploration.ipynb  (+7 more)
src/: active_learning.py  al.py  auprc.py  constants.py  fitter.py  harry_plotter.py  logging_callback.py  messenger_dataset.py  models.py  ordinary_training.py  preprocessing.py  train.py  utils.py
(+44 files in other folders)
