[metadata]
name = freddie
version = 1.0.0
author = Nikolas Kirschstein
author-email = nikolas.kirschstein@gmail.com
description = Bachelor's Thesis of Nikolas Kirschstein
long_description = file: README.md
long_description_content_type='text/markdown'
url = https://git.fim.uni-passau.de/kirschstei/freddie
license = Apache License 2.0
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: Apache License 2.0
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = =src
packages = find:
python_requires = >=3.8