[metadata]
name = freddie
version = 1.0.0
author = Nikolas Kirschstein
author-email = nikolas.kirschstein@gmail.com
description = Bachelor's Thesis of Nikolas Kirschstein
long_description = file: README.md
long_description_content_type='text/markdown'
url = https://git.fim.uni-passau.de/kirschstei/freddie
license = Apache License 2.0
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: Apache License 2.0
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = =src
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib~=3.4.3
    numpy~=1.21.2
    pandas~=1.3.4
    pyyaml~=6.0
    setuptools~=58.0.4
    torch~=1.10.0
    torchinfo~=1.5.4
    torchmetrics~=0.6.0
    tqdm==4.62.3
    wandb~=0.12.7
